Initial backend setup, registering user and getting user by token api completed

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "config": "^3.3.3",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
+    "gravatar": "^1.8.1",
     "gravator": "^1.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.14",
+    "normalize-url": "^5.3.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
